--- a/shinobi/index.scss
+++ b/shinobi/index.scss
@@ -5,7 +5,7 @@
 // base && layout
 @import "base";
 @import "breakpoints";
-@import 'grid';
+@import "grid";
 
 // colors
 @import "colors";
@@ -13,6 +13,7 @@
 // components (button, card, navbar)
 @import "components/card";
 @import "components/button";
+@import "components/navbar";
 
 // utilities (margin, padding, opacity)
 // m-4 pl-3 o-40 opacity
