--- a/turboo/index.scss
+++ b/turboo/index.scss
@@ -14,7 +14,7 @@
 @import "components/card";
 @import "components/button";
 @import "components/navbar";
+@import "components/badge";
 
 // utilities (margin, padding, opacity)
-// m-4 pl-3 o-40 opacity
 @import "utilities";
